--- a/css/index.css
+++ b/css/index.css
@@ -12,8 +12,8 @@ body{
 /* Menu de Naveção*/
 .menu{
     display: flex;
-    background: rgba(0,0,0,0.5);
-    color: black;
+    background: rgb(92, 92, 92);
+    color: rgb(255, 255, 255);
     justify-content: center;
     position: fixed;
     top: 0;
@@ -23,10 +23,10 @@ body{
 .menu .nav-menu{
     width: 60%;
     display: flex;
-    align-items: center;
-    justify-content:  space-between;
+    justify-content:  center;
     padding: 20px 0px;
 }
+
 
 .menu .nav-menu ul{
     display: flex;
@@ -53,13 +53,15 @@ a:visited{
     color: black;
 }
 
+
+
 #meio{
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.4);
+    color: rgb(0, 0, 0);
+    background-color: rgba(255, 255, 255, 0.4);
     background-blend-mode: color;
 }
 
@@ -80,17 +82,16 @@ a:visited{
 }
 
 #footer-conteudo{
-    display: inline
     width: 50%;
     margin: auto;
     padding: 80px 0;
     justify-content: space-between;
     padding-top: 120px;
+    
 }
 
 #direitos-autorais{
     font-size: 15px;
-    display: inline;
     padding: 80px 0;
     text-align: center;
 }
@@ -103,8 +104,7 @@ a:visited{
 #brasil-bandeira{
     height: 20px;
     width: auto;
-    margin-left: 10px;
-    float: left;
+    
 }
 
 
