--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@ body{
     background: rgb(92, 92, 92);
     color: rgb(255, 255, 255);
     justify-content: center;
-    position: fixed;
+    position: absolute;
     top: 0;
     width:  100%;
 }
@@ -65,17 +65,35 @@ a:visited{
     background-blend-mode: color;
 }
 
+.meio-conteudo{
+    display: flex;
 
+}
 
+.image-text{
+    margin: 10px;
+    border: solid black;
+    position: relative;
+    top: 30px;
+    border: solid black 0.1px;
+    
+}
 
+.text{
+    width: 17.5em; 
+    background: rgb(235, 235, 235); 
+    word-wrap: break-word;
+}
+img{
+    width: 280px;
+}
 
 /* footers ou rodapé*/
 #footer{
     background: rgb(92, 92, 92);
     color: white;
-    position: absolute;
+    position: relative;
     bottom: 0;
-    display: flex;
     width: 100%;
     height: 400px;
     
